package com.youtube.common.domain;

import java.util.List;

/**
 * Service for relaying outbox messages to the event publisher.
 * Implements the outbox pattern for reliable event publishing.
 */
public class OutboxRelay {
    private final OutboxRepository outboxRepository;
    private final EventPublisher eventPublisher;

    public OutboxRelay(OutboxRepository outboxRepository, EventPublisher eventPublisher) {
        this.outboxRepository = outboxRepository;
        this.eventPublisher = eventPublisher;
    }

    /**
     * Polls for pending outbox messages and publishes them.
     * This method should be called periodically to process pending messages.
     */
    public void pollAndPublish() {
        List<OutboxMessage> pendingMessages = outboxRepository.fetchBatch(OutboxStatus.PENDING, 100);
        
        for (OutboxMessage message : pendingMessages) {
            try {
                publish(message);
                outboxRepository.markSent(message.getId());
            } catch (Exception e) {
                outboxRepository.markFailed(message.getId(), e.getMessage());
            }
        }
    }

    /**
     * Publishes a single outbox message.
     * 
     * @param message the outbox message to publish
     */
    private void publish(OutboxMessage message) {
        // This would typically deserialize the payload and publish the event
        // Implementation depends on the specific event publisher being used
        throw new UnsupportedOperationException("Publishing logic needs to be implemented");
    }
}
